# freedom

./: 404.html  Cargo.toml  cutouts.txt  index.html  log.2024-07-01-21  log.2024-07-03-09  log.2024-07-04-01  log.2024-07-04-02  log.2024-07-04-23  log.2024-07-05-01  readme.md
logs/: log.2024-07-05-14  log.2024-07-05-16  log.2024-07-05-22  log.2024-07-07-00  log.2024-07-07-01  log.2024-07-09-00  log.2024-07-09-22  log.2024-07-10-01  log.2024-07-10-02  log.2024-07-10-11  log.2024-07-10-12  log.2024-07-10-13  log.2024-07-10-16  log.2024-07-10-17
src/: block.rs  crypt.rs  lib.rs  main.rs  net.rs  web.rs
web/: index.html  style.css
