[package]
name = "fredoom"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "=1.0.117"
bincode = "1.3.3"
ring = "0.17.8"
aes = "0.8.4"
cbc = "0.1.2"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
base64 = "0.22.1"
engine = "0.0.0"
